Specifying invalid bounds to moveChunk command will trigger dassert

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2024-10-14, CAR Team 2025-02-17
    • 1
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This is a test only issue due to the use of dassert.

      In the moveChunk command, we expect the user to specify bounds for a hashed shard key. If we cannot find a chunk that matches these bounds, we throw an error. In that error message, though, we construct a ChunkRange from the min and max which were passed in via the command. The ChunkRange constructor contains a dassert that minkey must be less than max key, so if running in debug mode, we will hit an invariant rather than throwing the user assertion from the cluster command.

      This can be fixed by printing the chunk range manually as we do earlier in the cluster command rather than creating a chunk range object.

            Assignee:
            Meryama Nadim
            Reporter:
            Allison Easton
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: