SERVER-94871 Print invalid bounds directly without calling ChunkRange (#32206)

GitOrigin-RevId: b66b4039c71e6e0bbdb590ebae77fb2e62995f6c